--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 :root {
     --main-bg-color: #edf5fe;
     --light-blue: #03a9f4;
+    --dark-blue: #028bca;
     --border-color: #0288d147;
     --container-width: 500px;
   }
@@ -278,4 +279,41 @@
     .email-container .filed {
       width: 300px;
     }
+  }
+
+
+  /*DOWNLOAD SECTION*/
+
+  section.download {
+    background: #fff;
+    width: 430px;
+    max-width: 90%;
+    border-radius: 25px;
+    box-shadow: 0px 20px 20px 0px #00000017;
+    padding: 2rem;
+    text-align: center;
+}
+.download__icon {
+    height: 8rem;
+}
+.download__meta h4 {
+    margin-bottom: 0;
+    line-height: 1.3;
+}
+.send-btn-container a {
+    display: inline-block;
+    font-size: 18px;
+    padding: 8px 40px;
+    margin-top: 15px;
+    background: var(--light-blue);
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+  }
+
+  .send-btn-container a:hover {
+      background: var(--dark-blue);
   }
