--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
           />
         </div>
 
-        <!-- <p class="email-info">Or Send via Email</p>
+        <p class="email-info">Or Send via Email</p>
         <div class="email-container">
           <form id="emailForm">
             <div class="filed">
@@ -88,7 +88,7 @@
             </div>
           </form>
         
-        </div> -->
+        </div>
 
       </div>
     </section>
