--- a/views/download.ejs
+++ b/views/download.ejs
@@ -18,6 +18,7 @@
         <div class="download__meta">
             <h4><%= fileName %></h4>
             <small><%= parseInt(fileSize/1000) %> KB</small>
+            <small><%= filepath %> KB</small>
         </div>
         <div class="send-btn-container">
             <a href="<%= downloadLink %>">Download file</a>
